Modularizes map actions and adds themed UI utilities
Refactors map action button logic into dedicated modules for better maintainability and separation of concerns. Introduces new utility classes and theme-aware helper functions to ensure consistent styling across interactive map controls. Adds robust error handling and notification feedback for overlay file operations. Enhances user experience by improving overlay loading, theming, and map centering logic, and updates workflow and linter configurations for improved CI/CD feedback.

--- a/.github/workflows/ActionLint.yml
+++ b/.github/workflows/ActionLint.yml
@@ -43,3 +43,10 @@ jobs:
       - uses: devops-actions/actionlint@c6744a34774e4e1c1df0ff66bdb07ec7ee480ca0 #v0.1.9
         continue-on-error: true
         id: action-lint
+        with:
+          shellcheck_opts: '-e SC2129'
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: actionlint-results
+          path: ${{ steps.action-lint.outputs.results-file }}
