--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,2 +1,18 @@
 DISABLE_LINTERS:
-  - REPOSITORY_GIT_DIFF
+- REPOSITORY_GIT_DIFF
+- SPELL_CSPELL
+
+EXCLUDED_DIRECTORIES: [ libs, tests, screenshots, node_modules, icons, docs ]
+SHOW_ELAPSED_TIME: true
+GITHUB_STATUS_REPORTER: true
+FILEIO_REPORTER: true
+GITHUB_COMMENT_REPORTER: true
+JSON_REPORTER: true
+MARKDOWN_SUMMARY_REPORTER: true
+SARIF_REPORTER: true
+TAP_REPORTER: true
+DISABLE_ERRORS: true
+JAVASCRIPT_DEFAULT_STYLE: prettier
+ACTION_ACTIONLINT_CONFIG_FILE: ActionLintConfig.yaml
+COPYPASTE_JSCPD_CONFIG_FILE: .jscpd.json
+HTML_HTMLHINT_CONFIG_FILE: .htmlhintrc
