Refactor and improve code readability across multiple utility files
- Updated various functions in `patchSummaryFields.js` to enhance readability by formatting conditional statements.
- Improved the structure of `renderAltitudeProfileChart.js`, `renderChartJS.js`, `renderGPSTrackChart.js`, `renderPowerVsHeartRateChart.js`, and `renderSpeedVsDistanceChart.js` for better clarity.
- Enhanced logging messages in `renderChartsWithData` and `shouldShowRenderNotification` for improved debugging.
- Cleaned up import statements in `renderMap.js` and `setupWindow.js` for consistency.
- Removed sensitive data from `gitleaks-report.json` and added configuration files for various tools including Checkov, Markdown Link Check, and Lychee.
- Updated `setupZoneData.js` to improve the extraction of heart rate zones.
- General code formatting and style improvements across multiple files to adhere to best practices.

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -16,3 +16,10 @@ JAVASCRIPT_DEFAULT_STYLE: prettier
 ACTION_ACTIONLINT_CONFIG_FILE: ActionLintConfig.yaml
 COPYPASTE_JSCPD_CONFIG_FILE: .jscpd.json
 HTML_HTMLHINT_CONFIG_FILE: .htmlhintrc
+JAVASCRIPT_PRETTIER_CONFIG_FILE: .prettierrc
+MARKDOWN_MARKDOWN_LINK_CHECK_CONFIG_FILE: .markdown-link-check.json
+MARKDOWN_MARKDOWN_TABLE_FORMATTER_FILTER_REGEX_EXCLUDE: "^.*CHANGELOG\\.md$"
+MARKDOWN_MARKDOWNLINT_CONFIG_FILE: .markdownlint.json
+REPOSITORY_CHECKOV_CONFIG_FILE: .checkov.yml
+REPOSITORY_KICS_CONFIG_FILE: kics.yaml
+SPELL_LYCHEE_CONFIG_FILE: lychee.toml
