--- a/.github/.spellcheck.yml
+++ b/.github/.spellcheck.yml
@@ -1,25 +1,28 @@
 matrix:
-  - name: Markdown
-    aspell:
-      lang: en
+- name: Markdown
+  aspell:
+    lang: en
     dictionary:
-      wordlists:
-        - .wordlist.txt
-      encoding: utf-8
+    wordlists:
+    - .wordlist.txt
+    encoding: utf-8
     pipeline:
-      - pyspelling.filters.markdown:
-          markdown_extensions:
-            - pymdownx.superfences
-      - pyspelling.filters.html:
-          comments: false
-          ignores:
-            - code
-            - pre
+    - pyspelling.filters.markdown:
+      markdown_extensions:
+      - pymdownx.superfences
+    - pyspelling.filters.html:
+      comments: false
+      ignores:
+      - code
+      - pre
     sources:
-      - '**/*.md'
+    - "**/*.md"
     default_encoding: utf-8
     exclude:
-      - 'libs/**'
-      - 'node_modules/**'
-      - '**/libs/**'
-      - '**/node_modules/**'
+    - "libs/**"
+    - "node_modules/**"
+    - "**/libs/**"
+    - "**/node_modules/**"
+    - "**/changelog.md"
+    - "**/CHANGELOG.md"
+    - "**/copilot-instructions.md"
