--- a/.github/workflows/ActionLint.yml
+++ b/.github/workflows/ActionLint.yml
@@ -16,37 +16,37 @@
 
 name: ActionLint
 concurrency:
-  group: actionlint-${{ github.ref }}
-  cancel-in-progress: false
+    group: actionlint-${{ github.ref }}
+    cancel-in-progress: false
 on:
-  push:
-    paths:
-      - '.github/**'
-  pull_request:
-    paths:
-      - '.github/**'
-  workflow_dispatch:
+    push:
+        paths:
+            - ".github/**"
+    pull_request:
+        paths:
+            - ".github/**"
+    workflow_dispatch:
 
 permissions:
-  contents: read
-  pull-requests: write
+    contents: read
+    pull-requests: write
 
 jobs:
-  job-1:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: devops-actions/actionlint@c6744a34774e4e1c1df0ff66bdb07ec7ee480ca0 #v0.1.9
-        continue-on-error: true
-        id: action-lint
-        with:
-          shellcheck_opts: '-e SC2129'
+    job-1:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Harden Runner
+              uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+              with:
+                  egress-policy: audit
+            - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - uses: devops-actions/actionlint@c6744a34774e4e1c1df0ff66bdb07ec7ee480ca0 # v0.1.9
+              continue-on-error: true
+              id: action-lint
+              with:
+                  shellcheck_opts: "-e SC2129"
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: actionlint-results
-          path: ${{ steps.action-lint.outputs.results-file }}
+            - uses: actions/upload-artifact@v4
+              with:
+                  name: actionlint-results
+                  path: ${{ steps.action-lint.outputs.results-file }}
