--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -2,8 +2,8 @@
   "tagname-lowercase": true,
   "attr-lowercase": true,
   "attr-value-double-quotes": true,
-  "attr-value-not-empty": true,
-  "attr-no-duplication": true,
+  "attr-value-not-empty": false,
+  "attr-no-duplication": false,
   "doctype-first": true,
   "tag-pair": true,
   "tag-self-close": true,
@@ -13,13 +13,13 @@
   "title-require": true,
   "alt-require": true,
   "doctype-html5": false,
-  "id-class-value": "dash",
+  "id-class-value": "false",
   "style-disabled": true,
-  "inline-style-disabled": true,
+  "inline-style-disabled": false,
   "inline-script-disabled": true,
   "space-tab-mixed-disabled": "space",
   "id-class-ad-disabled": true,
-  "href-abs-or-rel": true,
+  "href-abs-or-rel": false,
   "attr-unsafe-chars": true,
   "head-script-disabled": false
 }
