--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,15 @@
-# Ignore build output and dependencies
-dist/
+# Ignore libs folder recursively
 libs/
+
+# Ignore node_modules
 node_modules/
+
+# Ignore other common folders that shouldn't be formatted
+dist/
+build/
+coverage/
+*.min.js
+*.min.css
+
+# Ignore Change Logs
+**/CHANGELOG.md
