feat: Enhance settings header with chart status indicators and field toggles
- Added chart status indicators to the settings header for better visibility of chart states.
- Implemented functionality to toggle all field visibility at once, including buttons for enabling/disabling all fields.
- Updated field toggles to check for valid data before enabling/disabling options.
- Improved rendering logic for lap zone charts and event messages chart based on visibility settings.
- Added user-defined color options for event messages in the event messages chart.
- Introduced custom events for chart rendering updates and field toggle changes to improve UI responsiveness.
- Updated stylelint configuration to relax ID naming conventions.

--- a/electron-app/.lycheeignore
+++ b/electron-app/.lycheeignore
@@ -4,3 +4,12 @@ https://github.com/netlify/cli/blob/main/CHANGELOG.md
 file:///*
 data:*
 https://github.com/*
+github/CHANGELOG.md
+*/CHANGELOG.md
+.github/workflows/*
+mailto:20943337+Nick2bad4u@users.noreply.github.com
+mailto:support@github.com
+electron-app/package-lock.json
+electron-app/package.json
+CHANGELOG.md
+mailto:bot@stepsecurity.io
