--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -23,3 +23,6 @@ MARKDOWN_MARKDOWNLINT_CONFIG_FILE: .markdownlint.json
 REPOSITORY_CHECKOV_CONFIG_FILE: .checkov.yml
 REPOSITORY_KICS_CONFIG_FILE: kics.yaml
 SPELL_LYCHEE_CONFIG_FILE: lychee.toml
+JSON_PRETTIER_CONFIG_FILE: .prettierrc.json
+YAML_YAMLLINT_CONFIG_FILE: .yamllint.yaml
+CSS_STYLELINT_CONFIG_FILE: stylelint.config.js
