--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -24,26 +24,26 @@
 #     3. Dependency Review:
 #        - Uses the 'actions/dependency-review-action' (version v4.5.0) to perform a dependency review.
 
-name: 'Dependency Review'
+name: "Dependency Review"
 on: [pull_request]
 
 permissions:
-  contents: read
+    contents: read
 
 concurrency:
-  group: dependency-review-${{ github.ref }}
-  cancel-in-progress: false
+    group: dependency-review-${{ github.ref }}
+    cancel-in-progress: false
 
 jobs:
-  dependency-review:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
+    dependency-review:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Harden Runner
+              uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+              with:
+                  egress-policy: audit
 
-      - name: 'Checkout Repository'
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@da24556b548a50705dd671f47852072ea4c105d9 # v4.7.1
+            - name: "Checkout Repository"
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - name: "Dependency Review"
+              uses: actions/dependency-review-action@da24556b548a50705dd671f47852072ea4c105d9 # v4.7.1
