--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -21,82 +21,82 @@
 name: ESLint
 
 on:
-  push:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  pull_request:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  workflow_dispatch:
+    push:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    pull_request:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    workflow_dispatch:
 
 permissions:
-  contents: read
+    contents: read
 
 concurrency:
-  group: eslint-${{ github.ref }}
-  cancel-in-progress: false
+    group: eslint-${{ github.ref }}
+    cancel-in-progress: false
 
 jobs:
-  eslint:
-    name: Run eslint scanning
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
+    eslint:
+        name: Run eslint scanning
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            security-events: write
+            actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+        steps:
+            - name: Harden Runner
+              uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+              with:
+                  egress-policy: audit
 
-      - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - name: Checkout code
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Cache node modules
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: electron-app/node_modules
-          key: ${{ runner.os }}-electron-app-node-modules-${{ hashFiles('electron-app/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-electron-app-node-modules-
+            - name: Cache node modules
+              uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+              with:
+                  path: electron-app/node_modules
+                  key: ${{ runner.os }}-electron-app-node-modules-${{ hashFiles('electron-app/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-electron-app-node-modules-
 
-      - name: Install all required ESLint plugins
-        run: |
-          cd electron-app
-          npm install
+            - name: Install all required ESLint plugins
+              run: |
+                  cd electron-app
+                  npm install
 
-      - name: Run ESLint
-        env:
-          SARIF_ESLINT_IGNORE_SUPPRESSED: 'true'
-        run: |
-          npx eslint . --ignore-pattern libs --format stylish
-          npx eslint . --ignore-pattern libs --format @microsoft/eslint-formatter-sarif --output-file ../eslint-results.sarif
-        working-directory: electron-app
-        continue-on-error: true
+            - name: Run ESLint
+              env:
+                  SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
+              run: |
+                  npx eslint . --ignore-pattern libs --format stylish
+                  npx eslint . --ignore-pattern libs --format @microsoft/eslint-formatter-sarif --output-file ../eslint-results.sarif
+              working-directory: electron-app
+              continue-on-error: true
 
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@ce28f5bb42b7a9f2c824e633a3f6ee835bab6858 # v2.27.0
-        with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
+            - name: Upload analysis results to GitHub
+              uses: github/codeql-action/upload-sarif@ce28f5bb42b7a9f2c824e633a3f6ee835bab6858 # v2.27.0
+              with:
+                  sarif_file: eslint-results.sarif
+                  wait-for-processing: true
 
-      - name: Upload ESLint SARIF as artifact
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: eslint-results
-          path: eslint-results.sarif
+            - name: Upload ESLint SARIF as artifact
+              uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+              with:
+                  name: eslint-results
+                  path: eslint-results.sarif
