--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -1,67 +1,67 @@
 name: npm audit
 
 on:
-  pull_request:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  push:
-    branches:
-      - main
-      - 'releases/*'
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  # schedule:
-  #   - cron: '0 10 * * *'
+    pull_request:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    push:
+        branches:
+            - main
+            - "releases/*"
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    # schedule:
+    #   - cron: '0 10 * * *'
 
 permissions: write-all
 
 jobs:
-  scan:
-    name: npm audit
-    runs-on: ubuntu-latest
-    concurrency:
-      group: npm-audit-${{ github.ref }}
-      cancel-in-progress: false
-    defaults:
-      run:
-        working-directory: electron-app
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
+    scan:
+        name: npm audit
+        runs-on: ubuntu-latest
+        concurrency:
+            group: npm-audit-${{ github.ref }}
+            cancel-in-progress: false
+        defaults:
+            run:
+                working-directory: electron-app
+        steps:
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+              with:
+                  egress-policy: audit
 
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Cache node modules
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: electron-app/node_modules
-          key: ${{ runner.os }}-electron-app-node-modules-${{ hashFiles('electron-app/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-electron-app-node-modules-
+            - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - name: Cache node modules
+              uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+              with:
+                  path: electron-app/node_modules
+                  key: ${{ runner.os }}-electron-app-node-modules-${{ hashFiles('electron-app/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-electron-app-node-modules-
 
-      - name: install dependencies
-        run: npm install
-      - uses: oke-py/npm-audit-action@6ec7878c81d7dfe2b3295a63e1a608e9c952f46a # v3.0.0
-        with:
-          audit_level: moderate
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          issue_assignees: nick2bad4u
-          issue_labels: vulnerability,test
-          dedupe_issues: true
-          working_directory: electron-app
-        continue-on-error: true
+            - name: install dependencies
+              run: npm install
+            - uses: oke-py/npm-audit-action@6ec7878c81d7dfe2b3295a63e1a608e9c952f46a # v3.0.0
+              with:
+                  audit_level: moderate
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  issue_assignees: nick2bad4u
+                  issue_labels: vulnerability,test
+                  dedupe_issues: true
+                  working_directory: electron-app
+              continue-on-error: true
