--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,79 +1,79 @@
 name: Prettier
 
 on:
-  push:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  pull_request:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  workflow_dispatch:
+    push:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    pull_request:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    workflow_dispatch:
 
 concurrency:
-  group: prettier-${{ github.ref }}
-  cancel-in-progress: false
+    group: prettier-${{ github.ref }}
+    cancel-in-progress: false
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  prettier:
-    permissions:
-      contents: write  # for peter-evans/create-pull-request to create branch
-      pull-requests: write  # for peter-evans/create-pull-request to create a PR
-    runs-on: windows-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
+    prettier:
+        permissions:
+            contents: write # for peter-evans/create-pull-request to create branch
+            pull-requests: write # for peter-evans/create-pull-request to create a PR
+        runs-on: windows-latest
+        steps:
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+              with:
+                  egress-policy: audit
 
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - name: Checkout
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
-        with:
-          node-version: 20
+            - name: Set up Node.js
+              uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
+              with:
+                  node-version: 20
 
-      - name: Cache node modules
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: electron-app/node_modules
-          key: ${{ runner.os }}-electron-app-node-modules-${{ hashFiles('electron-app/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-electron-app-node-modules-
+            - name: Cache node modules
+              uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+              with:
+                  path: electron-app/node_modules
+                  key: ${{ runner.os }}-electron-app-node-modules-${{ hashFiles('electron-app/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-electron-app-node-modules-
 
-      - name: Install Prettier
-        run: npm install --no-save prettier@3.2.5
+            - name: Install Prettier
+              run: npm install --no-save prettier@3.2.5
 
-      - name: Run Prettier (fix)
-        working-directory: electron-app
-        run: npx prettier --write "**/*.{js,md,css,html}"
+            - name: Run Prettier (fix)
+              working-directory: electron-app
+              run: npx prettier --write "**/*.{js,md,css,html}"
 
-      - name: Commit & create pull request
-        uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
-        with:
-          commit-message: "chore: format code with Prettier"
-          title: "chore: format code with Prettier"
-          body: |
-            This PR was created automatically by the Prettier workflow.
-            It applies code formatting changes using Prettier and your project's configuration.
-          branch: "chore/prettier-fix"
-          add-paths: electron-app/**/*.{js,md,css,html}
-          delete-branch: false
-          token: ${{ secrets.GITHUB_TOKEN }}
+            - name: Commit & create pull request
+              uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
+              with:
+                  commit-message: "chore: format code with Prettier"
+                  title: "chore: format code with Prettier"
+                  body: |
+                      This PR was created automatically by the Prettier workflow.
+                      It applies code formatting changes using Prettier and your project's configuration.
+                  branch: "chore/prettier-fix"
+                  add-paths: electron-app/**/*.{js,md,css,html}
+                  delete-branch: false
+                  token: ${{ secrets.GITHUB_TOKEN }}
