--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -30,58 +30,58 @@
 name: Lint Code Base
 
 on:
-  push:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  pull_request:
-    paths-ignore:
-      - '*'
-      - '*/**'
-      - '!electron-app/icons/**'
-      - '!electron-app/icons'
-      - '!electron-app/**'
-      - '!electron-app'
-      - '**/CHANGELOG.md'
-      - 'CHANGELOG.md'
-  workflow_dispatch:
+    push:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    pull_request:
+        paths-ignore:
+            - "*"
+            - "*/**"
+            - "!electron-app/icons/**"
+            - "!electron-app/icons"
+            - "!electron-app/**"
+            - "!electron-app"
+            - "**/CHANGELOG.md"
+            - "CHANGELOG.md"
+    workflow_dispatch:
 permissions:
-  contents: write
+    contents: write
 
 concurrency:
-  group: superlinter-${{ github.ref }}
-  cancel-in-progress: false
+    group: superlinter-${{ github.ref }}
+    cancel-in-progress: false
 
 jobs:
-  run-lint:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      statuses: write # for github/super-linter to mark status of each linter run
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
+    run-lint:
+        permissions:
+            contents: read # for actions/checkout to fetch code
+            statuses: write # for github/super-linter to mark status of each linter run
+        runs-on: ubuntu-latest
+        steps:
+            - name: Harden Runner
+              uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+              with:
+                  egress-policy: audit
 
-      - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
+            - name: Checkout code
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+              with:
+                  # Full git history is needed to get a proper list of changed files within `super-linter`
+                  fetch-depth: 0
 
-      - name: Lint Code Base
-        uses: super-linter/super-linter@12150456a73e248bdc94d0794898f94e23127c88 # v7.4.0
-        #checkov:skip=skip-check:CKV2_GHA_1
-        env:
-          DEFAULT_BRANCH: 'main'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DISABLE_ERRORS: true
-          FILTER_REGEX_EXCLUDE: ^electron-app/libs/
-          MARKDOWN_LINT_DISABLE: true
+            - name: Lint Code Base
+              uses: super-linter/super-linter@12150456a73e248bdc94d0794898f94e23127c88 # v7.4.0
+              #checkov:skip=skip-check:CKV2_GHA_1
+              env:
+                  DEFAULT_BRANCH: "main"
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  DISABLE_ERRORS: true
+                  FILTER_REGEX_EXCLUDE: ^electron-app/libs/
+                  MARKDOWN_LINT_DISABLE: true
