Adds unified HR and power zone chart controls with color pickers
Separates heart rate and power zone chart toggles into dedicated, collapsible UI sections for better organization and discoverability. Introduces unified color pickers for customizing zone colors per chart type, enhancing user control and visual clarity. Refactors chart rendering and zone data logic to support these improvements, streamlines field toggle handling, and updates related components and configuration for consistency.

Improves accessibility and maintainability of chart settings, while removing redundant bar zone charts and simplifying toggles. Updates documentation and housekeeping files to reflect structural changes.

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,7 +1,4 @@
-DISABLE_LINTERS:
-    - REPOSITORY_GIT_DIFF
-    - SPELL_CSPELL
-
+DISABLE_LINTERS: []
 EXCLUDED_DIRECTORIES: [libs, tests, screenshots, node_modules, icons, docs]
 SHOW_ELAPSED_TIME: true
 GITHUB_STATUS_REPORTER: true
@@ -18,7 +15,7 @@ COPYPASTE_JSCPD_CONFIG_FILE: .jscpd.json
 HTML_HTMLHINT_CONFIG_FILE: .htmlhintrc
 JAVASCRIPT_PRETTIER_CONFIG_FILE: .prettierrc
 MARKDOWN_MARKDOWN_LINK_CHECK_CONFIG_FILE: .markdown-link-check.json
-MARKDOWN_MARKDOWN_TABLE_FORMATTER_FILTER_REGEX_EXCLUDE: "^.*CHANGELOG\\.md$"
+MARKDOWN_MARKDOWN_TABLE_FORMATTER_FILTER_REGEX_EXCLUDE: "^.*(CHANGELOG|README|SECURITY)\\.md$"
 MARKDOWN_MARKDOWNLINT_CONFIG_FILE: .markdownlint.json
 REPOSITORY_CHECKOV_CONFIG_FILE: .checkov.yml
 REPOSITORY_KICS_CONFIG_FILE: kics.yaml
