--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -443,11 +443,11 @@
     "./utils/aboutModal.js": "./utils/aboutModal.js",
     "./utils/addExitFullscreenOverlay.js": "./utils/addExitFullscreenOverlay.js",
     "./utils/addFullScreenButton.js": "./utils/addFullScreenButton.js",
-    "./utils/arrayBufferToBase64.js": "./utils/arrayBufferToBase64.js",
-    "./utils/buildAppMenu.js": "./utils/buildAppMenu.js",
+    "./utils/convertArrayBufferToBase64.js": "./utils/convertArrayBufferToBase64.js",
+    "./utils/createAppMenu.js": "./utils/createAppMenu.js",
     "./utils/chartSpec.js": "./utils/chartSpec.js",
     "./utils/copyTableAsCSV.js": "./utils/copyTableAsCSV.js",
-    "./utils/displayTables.js": "./utils/displayTables.js",
+    "./utils/createTables.js": "./utils/createTables.js",
     "./utils/drawMapForLap.js": "./utils/drawMapForLap.js",
     "./utils/enableTabButtons.js": "./utils/enableTabButtons.js",
     "./utils/formatDistance.js": "./utils/formatDistance.js",
@@ -476,7 +476,7 @@
     "./utils/renderSummary.js": "./utils/renderSummary.js",
     "./utils/renderSummaryHelpers.js": "./utils/renderSummaryHelpers.js",
     "./utils/renderTable.js": "./utils/renderTable.js",
-    "./utils/setActiveTab.js": "./utils/setActiveTab.js",
+    "./utils/updateActiveTab.js": "./utils/updateActiveTab.js",
     "./utils/setupTabButton.js": "./utils/setupTabButton.js",
     "./utils/setupTheme.js": "./utils/setupTheme.js",
     "./utils/setupWindow.js": "./utils/setupWindow.js",
@@ -484,7 +484,7 @@
     "./utils/showNotification.js": "./utils/showNotification.js",
     "./utils/showUpdateNotification.js": "./utils/showUpdateNotification.js",
     "./utils/theme.js": "./utils/theme.js",
-    "./utils/toggleTabVisibility.js": "./utils/toggleTabVisibility.js",
+    "./utils/updateTabVisibility.js": "./utils/updateTabVisibility.js",
     "./utils/updateMapTheme.js": "./utils/updateMapTheme.js"
   },
   "readme": "README.md",
